# More information for packaging and distributing project can be found
# here: https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = mtr
version = 0.0.1
author = Vladimir Nekrasov
# author_email = 
url = https://github.com/edavalosanaya/multi-task-refinenet
description = Real-Time Joint Semantic Segmentation, Depth, and Surface Normals Estimation
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL Public License
platform = any
keywords = real-time, segmentation, surface normals, depth, pytorch
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/edavalsoanaya/multi-task-refinenet/issues
    #Changelog = https://github.com/edavalosanaa/multi-task-refinenet/blob/master/CHANGELOG.md

[options]
# Make sure to use find: to include subpackages!
packages = find:
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires = 
    setuptools
install_requires = 
    numpy >= 1.18.3
    matplotlib
    Pillow
    torch
    opencv-python
    jupyter

[options.package_data]
* = *.png, *.jpg, *.qml

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
# Google conventions
ignore = D200, D203, D213, D406, D407   
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
